Add NgRx for large app

--- a/src/app/large/large.component.html
+++ b/src/app/large/large.component.html
@@ -7,7 +7,7 @@
     </li>
     <li class="mr-2">
       <a [routerLink]="'favorites'" routerLinkActive="tabActive" class="tab">
-        Favorite Movies (0)
+        Favorite Movies ({{ (count$ | async) ?? 0 }})
       </a>
     </li>
   </ul>
