--- a/src/app/large/pages/large-search/large-search.component.html
+++ b/src/app/large/pages/large-search/large-search.component.html
@@ -1,8 +1,7 @@
 <div class="grid grid-cols-12 gap-8">
   <div class="col-span-8 flex flex-col gap-4">
     <app-search-form (search)="onSearch($event)"></app-search-form>
-    <pre>{{ searchResults$ | async | json }}</pre>
-    <!-- <ng-container *ngIf="searchResults$ | async as results">
+    <ng-container *ngIf="searchResults$ | async as results">
       <ul class="grid grid-cols-3 xl:grid-cols-4 gap-8">
         <li *ngFor="let movie of results" class="">
           <button (click)="selectMovie(movie.imdbID)">
@@ -13,11 +12,9 @@
           </button>
         </li>
       </ul>
-    </ng-container> -->
+    </ng-container>
   </div>
   <div class="col-span-4">
     <router-outlet></router-outlet>
   </div>
 </div>
-
-<p>large-search works!</p>
