--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,16 @@
 <header>
-  <nav>
+  <nav class="flex items-center justify-between bg-primary">
     <ul class="flex items-center m-0 p-2 bg-primary">
       <li>
         <a routerLink="/small" routerLinkActive="activenav" class="nav">Small App</a>
       </li>
       <li>
-        <a routerLink="/medium" routerLinkActive="activenav" class="nav">Medium App</a>
-      </li>
-      <li>
         <a routerLink="/large" routerLinkActive="activenav" class="nav">Large App</a>
+      </li>
+    </ul>
+    <ul class="flex items-center m-0 p-2 bg-primary">
+      <li>
+        <a routerLink="/docs" routerLinkActive="activenav" class="nav">Docs</a>
       </li>
     </ul>
   </nav>
