--- a/src/app/ui/search-form/search-form.component.html
+++ b/src/app/ui/search-form/search-form.component.html
@@ -10,8 +10,9 @@
       />
     </li>
     <li class="flex-0">
-      <app-button>
-        Search
+      <app-button color="primary">
+        <app-icon name="heroMagnifyingGlass" size="sm"></app-icon>
+        <span>Search</span>
       </app-button>
     </li>
   </ol>
