--- a/src/app/large/pages/large-detail/large-detail.component.html
+++ b/src/app/large/pages/large-detail/large-detail.component.html
@@ -1,10 +1,22 @@
 <ng-container *ngIf="movie$ | async as movie">
   <app-deflist [movie]="movie">
-    <button
-      class="flex-0 w-full px-4 py-2 bg-primary text-white text-md"
-      (click)="addToFavorites(movie)"
-    >
-      ＋ Select Movie
-    </button>
+    <ng-container *ngIf="isFavorite$ | async; else notSelected">
+      <app-button
+        color="danger"
+        (click)="removeFromFavorites(movie.imdbID)"
+      >
+        <app-icon name="heroMinusCircle"></app-icon>
+        <span>Delete Movie</span>
+      </app-button>
+    </ng-container>
+    <ng-template #notSelected>
+      <app-button
+        color="primary"
+        (click)="addToFavorites(movie)"
+      >
+        <app-icon name="heroPlusCircle"></app-icon>
+        <span>Add Movie</span>
+      </app-button>
+    </ng-template>
   </app-deflist>
 </ng-container>
