--- a/src/app/large/pages/large-edit/large-edit.component.html
+++ b/src/app/large/pages/large-edit/large-edit.component.html
@@ -1,4 +1,4 @@
-<div>
+<ng-container *ngIf="movie$ | async as movie">
   <form [formGroup]="form" novalidate>
     <ol class="form-group">
       <li class="form-item">
@@ -50,22 +50,20 @@
       </li>
       <li class="flex gap-4 justify-between mt-8 items-center">
         <div class="flex items-center gap-4">
-          <app-button color="primary" type="submit" (click)="save()">
+          <app-button color="primary" type="submit" (onClick)="save()">
             <app-icon name="heroArrowPath"></app-icon>
             <span>Update</span>
           </app-button>
-          <app-button color="secondary" (click)="cancel()">
+          <app-button color="secondary" (onClick)="cancel()">
             <app-icon name="heroXCircle"></app-icon>
             <span>Reset</span>
           </app-button>
         </div>
-        <app-button
-        color="danger"
-      >
-        <app-icon name="heroMinusCircle"></app-icon>
-        <span>Delete</span>
-      </app-button>
+        <app-button color="danger" (onClick)="delete(movie.imdbID)">
+          <app-icon name="heroMinusCircle"></app-icon>
+          <span>Delete</span>
+        </app-button>
       </li>
     </ol>
   </form>
-</div>
+</ng-container>
