--- a/src/app/ui/button/button.component.html
+++ b/src/app/ui/button/button.component.html
@@ -1,6 +1,8 @@
 <button
-  class="flex-0 flex items-center gap-2 px-4 py-2 bg-primary text-white text-md shadow"
-  [ngClass]="{'bg-primary': color === 'primary', 'bg-gray-200 text-black': color === 'secondary', 'bg-danger' : color === 'danger' }"
+  class="flex-0 flex items-center gap-2 px-4 py-2 bg-primary text-white text-sm"
+  [ngClass]="{'bg-primary': color === 'primary', 'bg-secondary': color === 'secondary', 'bg-danger' : color === 'danger', 'text-disabled bg-disabledBg': color === 'disabled' }"
+  [disabled]="disabled"
+  (click)="onClick.emit()"
 >
   <ng-content></ng-content>
 </button>
